# OpenMirroring

./: Cargo.toml  README.md  TODO.md  default.nix  flake.nix
android-sender/: .gitignore  Cargo.toml  Makefile  README.md  build.gradle  build.rs  build.sh  build_libgst.sh  check.sh  fix.sh  flake.nix  settings.gradle.kts
android-sender/app/: build.gradle  build.gradle.kts
android-sender/app/jni/: Android.mk  Application.mk
android-sender/app/src/androidTest/java/com/github/malba124/OpenMirroring/android_sender/: ExampleInstrumentedTest.kt
android-sender/app/src/androidTest/java/com/github/malba124/openmirroring/android/openmirroringsender/: ExampleInstrumentedTest.kt
android-sender/app/src/main/: AndroidManifest.xml
android-sender/app/src/main/java/com/github/malba124/OpenMirroring/android_sender/: MainActivity.kt
android-sender/app/src/main/java/com/github/malba124/OpenMirroring/android_sender/ui/theme/: Color.kt  Theme.kt  Type.kt
android-sender/app/src/main/java/com/github/malba124/openmirroring/android/openmirroringsender/: MainActivity.kt
android-sender/app/src/main/java/com/github/malba124/openmirroring/android/openmirroringsender/ui/theme/: Color.kt  Theme.kt  Type.kt
android-sender/app/src/main/java/com/github/malba124/openmirroring/android/sender/: MainActivity.java  ScreenCaptureService.java
android-sender/app/src/main/res/values/: strings.xml  themes.xml
android-sender/app/src/test/java/com/github/malba124/OpenMirroring/android_sender/: ExampleUnitTest.kt
android-sender/app/src/test/java/com/github/malba124/openmirroring/android/openmirroringsender/: ExampleUnitTest.kt
android-sender/gradle/: libs.versions.toml
android-sender/gradle/wrapper/: gradle-wrapper.properties
android-sender/src/: discovery.rs  lib.rs  pipeline.rs  session.rs
android-sender/ui/: cast-dialog.slint  main.slint
common/: Cargo.toml
common/src/: lib.rs
common/src/net/: mod.rs  rest.rs  win.rs
common/src/sender/: audio.rs  discovery.rs  mod.rs  pipeline.rs  session.rs
common/src/sender/transmission/: mod.rs  rtp.rs  rtsp.rs  whep.rs
common/src/sender/transmission/hls/: fake_file_writer.rs  mod.rs
common/src/sender/transmission/rtp/: mod.rs
common/src/sender/transmission/rtsp/: mod.rs
common/src/sender/transmission/webrtc/: mod.rs
common/src/sender/transmission/webrtc/signaller/: handlers.rs
common/src/transmission/: mod.rs
common/src/transmission/hls/: fake_file_writer.rs  mod.rs  url_utils.rs
common/src/transmission/webrtc/: mod.rs
common/src/transmission/webrtc/signaller/: mod.rs  protocol.rs
common/src/video/: mod.rs  opengl.rs
common/src/video_preview/: mod.rs  opengl.rs  software.rs
fcast-lib/: Cargo.toml
http/: Cargo.toml
om-common/: Cargo.toml
om-mdns/: Cargo.toml
om-receiver/: Cargo.toml
om-receiver/src/: dispatcher.rs  lib.rs  main.rs  session.rs  video.rs
om-scap/: Cargo.toml  README.md
om-scap-gstreamer/: Cargo.toml  README.md
om-sender/: Cargo.toml
om-sender/src/: lib.rs  loading.rs  loading_hls.rs  main.rs  primary.rs  select_source.rs  session.rs
om-sender/src/loading/: imp.rs  mod.rs
om-sender/src/pipeline/: mod.rs
om-sender/src/pipeline/sink/: mod.rs
om-sender/src/pipeline/sink/hls/: fake_file_writer.rs  mod.rs
om-sender/src/pipeline/sink/webrtc/: mod.rs
om-sender/src/pipeline/sink/webrtc/signaller/: mod.rs
om-sender/src/signaller/: handlers.rs  mod.rs  server.rs
om-sender/src/sink/: mod.rs
om-sender/src/sink/hls/: mod.rs  tokiort.rs  url_utils.rs
om-sender/src/sink/webrtc/: mod.rs
om-sender/src/sink/webrtc/signaller/: mod.rs  server.rs
om-sender/src/views/: loading_hls_stream.rs  loading_sources.rs  mod.rs  primary.rs  select_source.rs
omreceiver/: Cargo.toml
omreceiver/src/: lib.rs  main.rs  session.rs
omsender/: Cargo.toml
omsender/src/: main.rs
receiver/: Cargo.toml  build.rs
receiver-android/: Cargo.toml  Makefile  build.rs
receiver-android/app/jni/: Android.mk  Application.mk
receiver-android/src/: lib.rs
receiver-core/: Cargo.toml  README.md  default.nix
receiver-core/shaders/: video_vertex.glsl
receiver-core/src/: lib.rs  pipeline.rs  session.rs  video_underlay.rs
receiver-core/ui/: main.slint
receiver-desktop/: Cargo.toml
receiver-ios/: Cargo.toml
receiver/shaders/: background_fragment.glsl  background_vertex.glsl  fragment.glsl  vertex.glsl  video_fragment.glsl
receiver/src/: dispatcher.rs  lib.rs  main.rs  pipeline.rs  session.rs  video.rs
receiver/src/underlays/: background.rs  mod.rs  video.rs
receiver/ui/: main.slint
scap/: Cargo.toml
scap-gstreamer/: Cargo.toml  build.rs
scap-gstreamer/src/: lib.rs
scap-gstreamer/src/scapsrc/: imp.rs  mod.rs
scap/src/: frame.rs  lib.rs
scap/src/capturer/: mod.rs
scap/src/capturer/engine/: mod.rs
scap/src/capturer/engine/linux/: mod.rs  wayland.rs  x11.rs
scap/src/capturer/engine/win/: mod.rs
scap/src/targets/: mod.rs
scap/src/targets/linux/: mod.rs  portal.rs
scap/src/targets/win/: mod.rs
scap/src/utils/: mod.rs
sender/: Cargo.toml  build.rs
sender/src/: discovery.rs  lib.rs  main.rs  pipeline.rs  session.rs
sender/src/pipeline/: mod.rs
sender/src/pipeline/preview_sink/: mod.rs  opengl.rs  software.rs
sender/src/pipeline/sink/: mod.rs
sender/src/pipeline/sink/hls/: mod.rs  url_utils.rs
sender/src/pipeline/sink/webrtc/: mod.rs
sender/src/pipeline/sink/webrtc/signaller/: handlers.rs  mod.rs  server.rs
sender/src/pipeline/transmission_sink/: mod.rs
sender/src/pipeline/transmission_sink/hls/: fake_file_writer.rs  mod.rs
sender/src/pipeline/transmission_sink/webrtc/: mod.rs
sender/src/pipeline/transmission_sink/webrtc/signaller/: mod.rs  server.rs
sender/src/views/: connecting_to_receiver.rs  loading_hls_stream.rs  loading_sources.rs  mod.rs  primary.rs  select_receiver.rs  select_source.rs
sender/ui/: cast-dialog.slint  horizontal-rule.slint  main.slint  settings.slint  tool-tip-area.slint  video-preview.slint
src/: dispatcher.rs  lib.rs  main.rs  packet.rs  (+2 more)
testkit/: Cargo.toml  README.md
testkit/src/: main.rs
testkit/ui/: main.slint
(+40 files in other folders)
