[package]
name = "android-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
android_logger = "0.15.0"
ndk-context = "0.1.1"
jni = "0.21.1"
slint = { version = "1.10.0", features = ["backend-android-activity-06"] }
async-channel = "2.3.1"
lazy_static = "1.5.0"
simple-mdns = { workspace = true }
futures-core = "0.3.31"
async-stream = "0.3.6"
futures-util = "0.3.31"
tokio = { workspace = true }
common = { path = "../common" }
gst = { workspace = true }

[build-dependencies]
slint-build = "1.10.0"

[lib]
name = "omandroidsender"
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.foo.bar" # TODO
build_targets = [ "x86_64-linux-android" ]

# See https://developer.android.com/guide/topics/manifest/uses-sdk-element
#
# Defaults to a `min_sdk_version` of 23 and `target_sdk_version` of 30 (or lower if the detected NDK doesn't support this).
# TODO
[package.metadata.android.sdk]
min_sdk_version = 34
target_sdk_version = 35