[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slint = { workspace = true }

gst-gl = { workspace = true, optional = true }
gst-video = { workspace = true, optional = true, features = [ "v1_24" ] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23.5", features = [ "v1_24" ], optional = true }
gst = { workspace = true, optional = true, features = [ "v1_24" ] }
gst-app = { workspace = true, optional = true, features = [ "v1_24" ] }

gio = { version = "0.20.9", optional = true }
m3u8-rs = { version = "6.0.0", optional = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

http = { path = "../http", optional = true }
fcast-lib = { path = "../fcast-lib", optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pnet_datalink = "0.35.0"
ipnetwork = "0.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.23.5", optional = true }
gst-gl-x11 = { package = "gstreamer-gl-x11", version = "0.23.5", optional = true }
glutin_egl_sys = { version = "0.7.1", optional = true }
glutin_glx_sys = { version = "0.6.1", optional = true }

[features]
video = ["gst", "gst-app", "gst-video", "gst-gl"]
sender = ["gst", "gst-video", "gio", "m3u8-rs", "gst-pbutils",
        "http", "crossbeam-channel", "gst-app", "futures",
        "fcast-lib", "tokio-stream", "mdns-sd", "gst-gl-egl", "gst-gl-x11",
        "glutin_egl_sys", "glutin_glx_sys",]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"