[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slint = { workspace = true }

gst-gl = { workspace = true, optional = true }
gst-video = { workspace = true, optional = true, features = [ "v1_24" ] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23.5", features = [ "v1_24" ], optional = true }
gst = { workspace = true, optional = true, features = [ "v1_24" ] }
gst-app = { workspace = true, optional = true, features = [ "v1_24" ] }
gst-rtsp = { package = "gstreamer-rtsp", version = "0.23.5", optional = true}
gst-rtsp-server = { package = "gstreamer-rtsp-server", version = "0.23.5", optional = true}
gst-webrtc = { git = "https://github.com/MAlba124/gst-plugins-rs.git", rev = "9fd4a8ab5817630bc6d6d0cca2fad6478f8c0f5c", package = "gst-plugin-webrtc", features = ["whep"] }
memchr = "2.7.5"

gio = { version = "0.20.9", optional = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

fcast-lib = { path = "../fcast-lib", optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pnet_datalink = "0.35.0"
ipnetwork = "0.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.23.5", optional = true }
gst-gl-x11 = { package = "gstreamer-gl-x11", version = "0.23.5", optional = true }
glutin_egl_sys = { version = "0.7.1", optional = true }
glutin_glx_sys = { version = "0.6.1", optional = true }

[features]
video = ["gst", "gst-app", "gst-video", "gst-gl", "gst-gl-egl", "gst-gl-x11", "glutin_egl_sys", "glutin_glx_sys",]
sender = ["gst", "gst-video", "gio", "gst-pbutils", "crossbeam-channel", "gst-app", "futures",
        "fcast-lib", "tokio-stream", "mdns-sd", "gst-rtsp", "gst-rtsp-server",]