[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
slint = { workspace = true }
gst-video = { workspace = true, optional = true }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.24.2", optional = true }
gst = { workspace = true, optional = true }
gst-app = { workspace = true, optional = true }
gst-rtsp = { package = "gstreamer-rtsp", version = "0.24.2", optional = true}
gst-rtsp-server = { package = "gstreamer-rtsp-server", version = "0.24.2", optional = true}
memchr = "2.7.5"

gio = { version = "0.20.9", optional = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

fcast-protocol.workspace = true
serde_json.workspace = true
crossbeam-channel = { version = "0.5.15", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pnet_datalink = "0.35.0"
ipnetwork = "0.20.0"

[features]
sender = ["gst", "gst-video", "gio", "gst-pbutils", "crossbeam-channel", "gst-app", "futures", "tokio-stream", "mdns-sd", "gst-rtsp", "gst-rtsp-server"]