[package]
name = "om-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
gst = { workspace = true }
gst-video = { workspace = true }
gst-webrtc = { workspace = true }
gst-rtp = { workspace = true }
gst-gtk4 = { workspace = true }
gtk4 = { workspace = true }
fcast-lib = { path = "../fcast-lib" }
om-common = { path = "../om-common" }
pnet_datalink = "0.35.0"
ipnetwork = "0.20.0"