[package]
name = "om-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { workspace = true }
gst = { workspace = true }
gst-gtk4 = { workspace = true }
gst-video = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gst-webrtc = { workspace = true }
gst-rtp = { workspace = true }
scap-gstreamer = { package = "om-scap-gstreamer", path = "../om-scap-gstreamer" }
om-common = { path = "../om-common" }
fcast-lib = { path = "../fcast-lib" }
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
futures = "0.3"
thiserror = "2"
pin-project-lite = "0.2"