[package]
name = "om-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
gtk4 = { workspace = true }
gst = { workspace = true }
gst-gtk4 = { workspace = true }
gst-video = { workspace = true }
gst-webrtc = { workspace = true }
gst-rtp = { workspace = true }
gst-hlssink3 = { package = "gst-plugin-hlssink3", version = "0.13.5" }
gst-fmp4 = { package = "gst-plugin-fmp4", version = "0.13.5" }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23.5", features = [ "v1_22" ] }
m3u8-rs = "6.0.0"
gio = "0.20.9"
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
futures = "0.3"
thiserror = "2"
pin-project-lite = "0.2"
bytes = "1.10.1"
om-common = { path = "../om-common" }
fcast-lib = { path = "../fcast-lib" }
http = { path = "../http" }
scap-gstreamer = { package = "om-scap-gstreamer", path = "../om-scap-gstreamer" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"