[package]
name = "receiver-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
log.workspace = true
gst = { workspace = true, features = [ "v1_26" ] }
fcast-lib = { path = "../fcast-lib" }
common = { path = "../common", features = ["video"] }
gethostname = "1.0.1"
slint = { workspace = true, features = ["backend-linuxkms"] }
anyhow.workspace = true
futures.workspace = true
tokio-stream.workspace = true
glow = "0.16.0"
url = "2.5.4"
thiserror = "2.0.12"
clap = { version = "4.5.38", features = ["derive"] }
mdns-sd.workspace = true
qrcode = "0.14.1"

[build-dependencies]
slint-build.workspace = true

[features]
desktop = ["slint/backend-linuxkms"]
android = ["slint/backend-android-activity-06"]
default = []