[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
gst = { workspace = true }
gst-video = { workspace = true }
gst-gl = { workspace = true }
simple-mdns = { workspace = true }
fcast-lib = { path = "../fcast-lib" }
common = { path = "../common", features = ["video"] }
gethostname = "1.0.1"
slint = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }