[package]
name = "scap"
description = "Modern, high-performance screen capture library for Rust. Cross-platform."
version = "0.0.8"
edition = "2021"
license = "GPL-3.0-or-later"
authors = [
	"Siddharth <siddharth99c@gmail.com>",
	"Pranav <pranav2000joglekar@gmail.com>",
    "Marcus L. Hanestad <marlhan@proton.me>",
]
readme = "README.md"
keywords = ["screen", "recording", "video", "capture", "media"]
categories = ["graphics", "multimedia", "multimedia::video"]

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.3.6"
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.30.0"
tao-core-video-sys = "0.2.0"
core-graphics-helmer-fork = "0.24.0"
screencapturekit = "0.2.8"
screencapturekit-sys = "0.2.8"
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8.0"
dbus = "0.9.7"
rand = { workspace = true }
xcb = { version = "1.4.0", features = ["randr", "xlib_xcb", "xfixes", "shm"] }
x11 = "2.21.0"
libc = "0.2"