[package]
name = "sender"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
gst = { workspace = true }
common = { path = "../common", features = ["video", "sender"] }
fcast-lib = { path = "../fcast-lib" }
scap-gstreamer = { path = "../scap-gstreamer" }
# mdns-sd = { workspace = true }
# simple-mdns = { workspace = true }
slint = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }