[package]
name = "sender"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
gst = { workspace = true }
common = { path = "../common", features = ["video", "sender"] }
fcast-lib = { path = "../fcast-lib" }
scap-gstreamer = { path = "../scap-gstreamer" }
slint = { version = "1.11.0", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-femtovg", "std"] }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
mdns-sd = { version = "0.13.9", default-features = false, features = ["log"] }
flume = { version = "0.11.1", default-features = false, features = ["eventual-fairness"] }

[build-dependencies]
slint-build = { workspace = true }