[package]
name = "sender"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger.workspace = true
log.workspace = true
gst.workspace = true
common = { path = "../common", features = ["sender"] }
fcast-lib = { path = "../fcast-lib" }
slint.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
mdns-sd = "0.13.9"
flume = "0.11.1"
tokio.workspace = true

[build-dependencies]
slint-build.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11.0", default-features = false, features = ["async-std"] } # `tokio` breaks slint
xcb = { version = "1.5.0", features = ["randr", "xlib_xcb"] }
x11 = "2.21.0"
pipewire = "0.8.0"