[package]
name = "testkit"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
mdns-sd = { version = "0.13.9", default-features = false, features = ["logging"] }
flume = { version = "0.11.1", default-features = false }
log = { workspace = true }
env_logger = { workspace = true }
fcast-lib = { path = "../fcast-lib" }
chrono = "0.4.41"
common = { path = "../common", features = ["sender"] }

[build-dependencies]
slint-build = { workspace = true }